<resources>
    <string name="app_name">UTBS</string>

    <!--Toolbar Titles-->
    <string name="title_activity_map">Map</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_addActivity">Add New Location</string>
    <string name="title_addActivityAlt">Add New Review</string>
    <string name="title_activity_favorites">Favorites</string>
    <string name="title_activity_reviews">My Reviews</string>
    <string name="title_activity_search">Search</string>

    <string name="exception">Oops, something went wrong. Email me the logs and I\'ll take a look at it asap!</string>
    <string name="crash_dialog_title">UTBS has crashed</string>
    <string name="crash_dialog_text">An unexpected error occurred forcing the
    application to stop. Please help me by emailing the error logs.</string>
    <string name="crash_dialog_ok_toast">Thank you!</string>


    <!--Drawer Items-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_about">About</string>
    <string name="action_maptype">Map Type</string>
    <string name="action_search">Search</string>
    <string name="action_save">Save</string>

    <!--Dialog Titles-->
    <string name="map_dialog">CHOOSE MAP TYPE</string>
    <string name="customStallNumber">ENTER CUSTOM VALUE</string>

    <!--Review Fields-->
    <string name="building">Building:</string>
    <string name="room">Room:</string>
    <string name="rating">Overall Rating</string>
    <string name="reviews">Reviews</string>
    <string name="up">&amp; Up</string>

    <!--Misc-->
    <string name="back">Press BACK again to exit</string>
    <string name="appbar_scrolling_view_behavior" translatable="false">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>

    <!--PagerAdapterHeadings-->
    <string name="about_adapter">About App</string>
    <string name="library_adapter">Libraries</string>
    <string name="changes_adapter">Changelog</string>
    <string name="about_app">About</string>

    <!--Licenses-->
    <string name="apachename">Apache 2.0</string>
    <string name="apache">Licensed under the Apache License, Version 2.0 (the \"License\");
        \nYou may not use this file except in compliance with the License.
        \nYou may obtain a copy of the License at\n
        \nhttp://www.apache.org/licenses/LICENSE-2.0\n
        \nUnless required by applicable law or agreed to in writing, software distributed under
        the License is distributed on an \"AS IS\" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.\n
        \nSee the License for the specific language governing permissions and
        limitations under the License.</string>
    <string name="mitname">The MIT License</string>
    <string name="mit">Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the "Software"), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:\n
        \nThe above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.\n
        \nTHE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.</string>

    <!--Spinner Headers-->
    <string name="spinnerprompt">Select Type</string>
    <string name="stallprompt">Select Number</string>
    <string name="spaceprompt">Select Space</string>
    <string name="tempPrompt">Select Temp</string>
    <string name="tastePrompt">Select Taste</string>

    <string-array name="taste_array">
        <item>Wow</item>
        <item>Pretty Good</item>
        <item>Meh</item>
        <item>Not Great</item>
        <item>Disgusting</item>
    </string-array>

    <string-array name="temp_array">
        <item>Cold</item>
        <item>Cool</item>
        <item>Lukewarm</item>
        <item>Warm</item>
        <item>Hot</item>
    </string-array>

    <string-array name="type_array">
        <item>Bathroom</item>
        <item>Fountain</item>
    </string-array>

    <string-array name="space_array">
        <item>Extra Small</item>
        <item>Small</item>
        <item>Medium</item>
        <item>Large</item>
        <item>Extra Large</item>
    </string-array>

    <string-array name="stall_array">
        <item>None</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>Custom</item>
    </string-array>

    <!--Changelog-->
    <string name="change112817">Initial Release</string>

    <string-array name="release">
        <item>November 28, 2017</item>
    </string-array>

    <string-array name="features">
        <item>@string/change112817</item>
    </string-array>

    <!--About App-->
    <string-array name="headers">
        <item>Developed By</item>
        <item>About UTBS</item>
        <item>Permissions</item>
        <item>Source Code</item>
        <item>Contact Us</item>
    </string-array>

    <!--About App-->
    <string name="developed">David Chun, Zoe Ng, Joel Wang, Hans Xu\n
    \nThe University of Texas Austin\n
    \nCopyright &#169; 2017-2018</string>
    <string name="aboutApp">UT Bathroom Services is an app designed to help people find their way around the UT Campus facilities.
    \nUsers can find and rate bathrooms or water fountains, creating a database.</string>
    <string name="explainPermissions">Location: The location permission is used to provide up to date location tracking while in app and to assign new facility locations\n
    \nWe do not and will not collect any personally identifiable information.\n</string>
    <string name="sourceCode">View the Source Code.\n
    \nIf you\'d like to help with development, feel free to submit a pull request!</string>
    <string name="contactUs">Have a bug to report or a suggestion to offer? Open an issue on our Github!</string>
    <string name="openLink">Open</string>
    <string name="dGithub">Opening Source Code</string>
    <string name="contact">For Bug Reports or QOL Suggestions, add a new issue here:</string>
    <string name="contactURL">https://github.com/dChunGit/UT-Bathroom-Services/issues</string>

    <string-array name="explanation">
        <item>@string/developed</item>
        <item>@string/aboutApp</item>
        <item>@string/explainPermissions</item>
        <item>@string/sourceCode</item>
        <item>@string/contactUs</item>
    </string-array>

    <!--Libraries-->
    <!--Make sure to change in AboutFragment-->
    <string-array name="about">
        <item>FloatingActionButton</item>
        <item>Calligraphy</item>
        <item>Material Dialogs</item>
        <item>Simple Rating Bar</item>
        <item>Scale Rating Bar</item>
        <item>AVLoadingIndicatorView</item>
        <item>TapTargetView</item>
        <item>EasingInterpolator</item>
        <item>DBFlow</item>
        <item>AppCompat-v7 27.0.1</item>
        <item>Constraint-Layout 1.0.2</item>
        <item>Design 27.0.1</item>
        <item>RecyclerView 27.0.1</item>
        <item>CardView 27.0.1</item>
        <item>CustomTabs 27.0.1</item>
        <item>Play Services Maps 11.6.2</item>
        <item>Firebase Firestore 11.6.2</item>
        <item>Play Services Location 11.6.2</item>
    </string-array>

    <string-array name="license">
        <item>Copyright - Dmytro Tarianyk - Apache 2.0</item>
        <item>Copyright - Christopher Jenkins - Apache 2.0</item>
        <item>Copyright - Aidan Michael Follestad - MIT</item>
        <item>Copyright - Iván Arcuschin - Apache 2.0</item>
        <item>Copyright - Willy Yu - MIT</item>
        <item>Copyright - Jack Wang - Apache 2.0</item>
        <item>Copyright - Keepsafe Software Inc. - Apache 2.0</item>
        <item>Copyright - Masayuki Suda - MIT</item>
        <item>Copyright - Raizlabs - MIT</item>
        <item>Copyright - Android - Apache 2.0</item>
        <item>Copyright - Android - Apache 2.0</item>
        <item>Copyright - Android - Apache 2.0</item>
        <item>Copyright - Android - Apache 2.0</item>
        <item>Copyright - Android - Apache 2.0</item>
        <item>Copyright - Android - Apache 2.0</item>
        <item>Copyright - Google - Apache 2.0</item>
        <item>Copyright - Google - Apache 2.0</item>
        <item>Copyright - Google - Apache 2.0</item>
    </string-array>


</resources>
