<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            android:elevation="4dp">

            <LinearLayout
                android:layout_margin="7dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/locationLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center">

                    <TextView
                        android:id="@+id/locationText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:text="@string/building"/>

                    <TextView
                        android:gravity="center_horizontal"
                        android:layout_marginStart="7dp"
                        android:id="@+id/buildingname1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="N/A"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_margin="7dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="20sp"
                            android:text="@string/room"/>

                        <TextView
                            android:layout_marginStart="7dp"
                            android:gravity="center_horizontal"
                            android:id="@+id/roomname1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="N/A"/>
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="12dp"
                    android:background="@color/lightgrey"/>

                <LinearLayout
                    android:layout_margin="7dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/rating1"
                        android:layout_marginBottom="7dp"
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:text="@string/rating"/>

                    <com.iarcuschin.simpleratingbar.SimpleRatingBar
                        android:id="@+id/stars1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        app:srb_starSize="20dp"
                        app:srb_numberOfStars="5"
                        app:srb_stepSize="0.1"
                        app:srb_borderColor="@color/colorAccent"
                        app:srb_fillColor="@color/colorAccent" />

                </LinearLayout>

            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>